z-index fix

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 #info {
   position: absolute;
   background-color: #ffffff;
-  z-index: 1;
+  z-index: 2;
   text-align: center;
   padding: 10px 15px;
 }
